--- a/TasksManager/BlazorApp/Pages/Tasks/Index.razor
+++ b/TasksManager/BlazorApp/Pages/Tasks/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Tasks"
 @using BlazorApp.Models
 @inject HttpClient Http
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 
 <h1 class="text-center mb-3">List of Tasks</h1>
@@ -19,8 +20,8 @@ else
                 <th>ID</th>
                 <th>Title</th>
                 <th>Description</th>
-                <th>DueDate</th>
-                <th>IsCompleted</th>
+                <th>Due Date</th>
+                <th>Is Completed</th>
             </tr>
         </thead>
         <tbody>
@@ -31,7 +32,16 @@ else
                     <td>@task.Title</td>
                     <td>@task.Description</td>
                     <td>@task.DueDate</td>
-                    <td>@task.IsCompleted</td>
+                    <td>
+                        @if (task.IsCompleted)
+                        {
+                            <span class="badge rounded-pill text-bg-success">Yes</span>
+                        }
+                        else
+                        {
+                            <span class="badge rounded-pill text-bg-warning">No</span>
+                        }
+                    </td>
                     <td style="white-space:nowrap">
                         <a class="btn btn-primary btn-sm" href="/Tasks/Edit/@task.Id">Edit</a>
                         <a class="btn btn-danger btn-sm" href="/Tasks/Delete/@task.Id">Delete</a>
